added logo nav with flexbox

--- a/code/index.html
+++ b/code/index.html
@@ -9,6 +9,13 @@
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <img class="logo" src="logo.svg">
+      <nav>
+        <a class="order-1" href="#">one</a>
+        <a class="order-2" href="#">two</a>
+        <a href="#">three</a>
+        <a href="#">four</a>
+      </nav>
     </header>
 
     <section class="big-news">
