--- a/code/index.html
+++ b/code/index.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-      <h1>Hej</h1>
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <title>Project 2: The News Site</title>
+  <link rel="stylesheet" href="./style.css" />
+  <!-- dont forget the meta tag for responsiveness -->
+</head>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+<body>
+  <header>
+    <!-- Some kind of logo and navbar -->
+    <img src="logo.svg" alt="logo">
+
+    <nav>
+      <a class"order1" href="#">One</a>
+      <a href="#">Two</a>
+      <a href="#">Three</a>
+      <a href="#">Four</a>
+    </nav>
+  </header>
+  <section class="big-news">
+    <!-- The big news content -->
+  </section>
+
+  <section class="">
+    <!-- The other news  -->
+  </section>
+</body>
+
 </html>
