--- a/code/index.html
+++ b/code/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>W Magazine - Even Stranger Things</title>
     <link rel="stylesheet" href="style.css" type="text/css"/>
+    <link rel="icon" href="img/logo.png" type="image/x-icon"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   </head>
