add first elements and styling

--- a/code/index.html
+++ b/code/index.html
@@ -4,15 +4,41 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <div class="hamburger">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <nav>
+        <a href="#">NEWS</a>
+        <a href="#">TOURS</a>
+      </nav>
+      <img src="#" alt="The Hikealot Logo">
+      <nav>
+        <a href="#">PEOPLE</a>
+        <a href="#">EQUIPMENT</a>
+      </nav>
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
+      <section class="top-card">
+        <img src="mountains_barnyz.jpg" alt="The top news image">
+        <div>
+          <h1>Category</h1>
+          <h2>The big headline wow!</h2>
+          <p>Lorem Ipsum best not make any more threats to your website. 
+            It will be met with fire and fury like the world has never seen. 
+            If Trump Ipsum weren’t my own words, perhaps I’d be dating it.</p>
+          <a href="#">Read more</a>
+        </div>
+      </section>
     </section>
 
     <section class="">
