Created html structure for the news site

--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,40 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>Project 2</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+    <header><!-- Some kind of logo and navbar -->
+      <img class="logo" src="">
+      <div class="magazine-name">
+        <p></p>
+      </div>
+      <div class="menu">
 
-    <section class="">
-      <!-- The other news  -->
+      </div>
+      <div class="desktop-menu">
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
+     </header>
+
+    <article class="main-news"><!-- The big news content -->
+      <img src="">
+      <h1></h1>
+    </article>
+
+    <section class="news-container"><!-- The other news  -->
+      <article class="news">
+        <img src="">
+        <h2></h2>
+      <article>
     </section>
+      
   </body>
 </html>
