Created html structure

--- a/code/index.html
+++ b/code/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-    <header><!-- Some kind of logo and navbar -->
+    <header>
       <img class="logo" src="">
       <div class="magazine-name">
         <p></p>
@@ -25,12 +25,12 @@
       </div>
      </header>
 
-    <article class="main-news"><!-- The big news content -->
+    <article class="main-news">
       <img src="">
       <h1></h1>
     </article>
 
-    <section class="news-container"><!-- The other news  -->
+    <section class="news-container">
       <article class="news">
         <img src="">
         <h2></h2>
