Added logo and navigation with flexbox.

--- a/code/index.html
+++ b/code/index.html
@@ -14,8 +14,8 @@
     <img src="logo.svg" alt="logo">
 
     <nav>
-      <a class"order1" href="#">One</a>
-      <a href="#">Two</a>
+      <a class="order-1" href="#">One</a>
+      <a class="order-2" href="#">Two</a>
       <a href="#">Three</a>
       <a href="#">Four</a>
     </nav>
