Added pictures, HTML5 skeleton and CSS style

--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,91 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="widht=device-width, initial-scale=1">
+  <title>Fooder Magazine - Keep up with the latest of the foodie community</title>
+  <link rel="stylesheet" href="style.css">
+  <!--<link rel="stylesheet" href="./style.css" />-->
+  <!-- dont forget the meta tag for responsiveness -->
+</head>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+<body>
+
+  <header>
+    <img src="LogoFooderWithText.png" alt="Fooder Logo">
+    <h1>Fooder Magazine</h1>
+    <h2>Get the latest bites of news from the foodie community</h2>
+  
+    <nav>
+      <div class="hamburger">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </div>
+      <ul class="nav-links">
+        <li class="link"><a href="#">Home</a></li>
+        <li class="link"><a href="#">Archive</a></li>
+        <li class="link"><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+
+  <section class="big-news">
+    <article>
+      <img src="pictures/bigkitchen.jpg" alt="Restaurant kitchen">
+      <p>Lorem ipsum dolor sit amet consectetur adipiscing elit nunc, lectus vestibulum aenean a montes commodo vitae,
+        taciti dictum maecenas rhoncus diam convallis sollicitudin. Malesuada ultrices eget diam ridiculus facilisis
+        faucibus at tincidunt mollis, ad libero vivamus ante pretium laoreet montes odio vestibulum, mi cubilia augue
+        placerat eros fringilla velit vel. Est et maecenas habitant lobortis aliquet senectus porttitor volutpat
+        convallis mus dignissim ante magna, purus nulla lacinia conubia accumsan egestas velit integer gravida
+        hendrerit metus elementum.</p>
+    </article>
+    <!-- The big news content -->
+  </section>
+
+
+  <section class="card-container">
+    <div class="article-card one"><img src="pictures/salmon.jpg" alt="">
+      <h3>Olszewski opens up new restaurant</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ullamcorper, dictumst nisi enim curabitur neque montes
+        ultricies pulvinar odio, integer penatibus litora class phasellus magnis nam.</p>
+    </div>
+    <div class="article-card two"><img src="pictures/cookingpasta.jpg" alt="">
+      <h3>Crashcourse in pasta</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ullamcorper, dictumst nisi enim curabitur neque montes
+        ultricies pulvinar odio, integer penatibus litora class phasellus magnis nam.</p>
+    </div>
+    <div class="article-card three"><img src="pictures/femalechef.jpg" alt="">
+      <h3>Who run the chef-world? Girls!</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ullamcorper, dictumst nisi enim curabitur neque montes
+        ultricies pulvinar odio, integer penatibus litora class phasellus magnis nam.</p>
+    </div>
+    <div class="article-card four"><img src="pictures/restaurantoverview.jpg" alt="">
+      <h3>Covid-19 vs restaurants</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ullamcorper, dictumst nisi enim curabitur neque montes
+        ultricies pulvinar odio, integer penatibus litora class phasellus magnis nam.</p>
+    </div>
+    <div class="article-card five"><img src="pictures/casserol.jpg" alt="">
+      <h3>Going back to oldschool methods</h3><p>Lorem ipsum dolor sit amet consectetur adipiscing elit ullamcorper, dictumst nisi enim curabitur neque montes
+        ultricies pulvinar odio, integer penatibus litora class phasellus magnis nam.</p>
+    </div>
+    <div class="article-card six"><img src="pictures/cookingInProgress.jpg" alt="">
+      <h3>Stockholms best Ramen</h3><p>Lorem ipsum dolor sit amet consectetur adipiscing elit ullamcorper, dictumst nisi enim curabitur neque montes
+        ultricies pulvinar odio, integer penatibus litora class phasellus magnis nam.</p>
+    </div>
+    <div class="article-card seven"><img src="pictures/pizza.jpg" alt="">
+      <h3>Papa Poyas Pizza</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipiscing elit ullamcorper, dictumst nisi enim curabitur neque montes
+        ultricies pulvinar odio, integer penatibus litora class phasellus magnis nam.</p>
+    </div>
+    <div class="article-card eight"><img src="pictures/tacos.jpg" alt="">
+      <h3>Fooders guide to Mexico</h3><p>Lorem ipsum dolor sit amet consectetur adipiscing elit ullamcorper, dictumst nisi enim curabitur neque montes
+        ultricies pulvinar odio, integer penatibus litora class phasellus magnis nam.</p>
+    </div>
+  </section>
+
+</body>
+
 </html>
