First css styling (header and main-news)

--- a/code/index.html
+++ b/code/index.html
@@ -5,29 +5,27 @@
     <title>Project 2</title>
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Catamaran&display=swap" rel="stylesheet">
   </head>
   <body>
 
     <header>
-      <img class="logo" src="">
-      <div class="magazine-name">
-        <p></p>
-      </div>
-      <div class="menu">
+      <ul class="logo">
+        <li><img src="logo.png"></li>
+        <li>FASHIONEWS</li>
+      </ul>            
+      <!--<div class="menu"> 
 
-      </div>
-      <div class="desktop-menu">
-        <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
-      </div>
-     </header>
+      </div>-->
+      <ul class="desktop-menu">
+          <li>Home</li>
+          <li>About</li>
+          <li>Contact</li>
+      </ul>
+    </header>
 
     <article class="main-news">
-      <img src="">
-      <h1></h1>
+      <img src="main-news-pic.jpeg">
     </article>
 
     <section class="news-container">
