Changed width of .article-card. Added desktop max-width for .card-container

--- a/code/index.html
+++ b/code/index.html
@@ -32,6 +32,7 @@
   </header>
 
 
+  <main>
   <section class="big-news">
     <article>
       <img src="pictures/bigkitchen.jpg" alt="Restaurant kitchen">
@@ -85,6 +86,7 @@
         ultricies pulvinar odio, integer penatibus litora class phasellus magnis nam.</p>
     </div>
   </section>
+</main>
 
 </body>
 
