added logo and navigation

--- a/code/index.html
+++ b/code/index.html
@@ -9,6 +9,16 @@
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <img src="logo.svg"> </img>
+      <h1>The News site </h1>
+      <nav>
+        <a href="#">One</a>
+        <a href="#">Two</a>
+        <a href="#">Three</a>
+        <a href="#">Four</a>
+
+
+      </nav>
     </header>
 
     <section class="big-news">
