Reordered navbar view for screen size 900-1200px

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
                 <nav class="navbar">
                         <a href="#" class="navbar-item logo">MN</a>
                         <a href="#" class="navbar-item">Wood</a>
-                        <a href="#" class="navbar-item">Ceramics</a>
-                        <a href="#" class="navbar-item">Colors</a>
-                        <a href="#" class="navbar-item">Yarn</a>
+                        <a href="#" class="navbar-item">Clay</a>
+                        <a href="#" class="navbar-item item-1">Color</a>
+                        <a href="#" class="navbar-item item-1">Yarn</a>
                 </nav>
         </header>   
 </body>
