added header with navbar and using flexbox

--- a/code/index.html
+++ b/code/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Ylva Nilsson" />
+    <meta name="description" content="A News Site about sailing boats" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
@@ -9,14 +12,39 @@
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <div class="site-name">
+        <img class="logo" src="./logo.svg" alt="logo"/>
+        <span>SITE NAME</span>
+      </div>
+
+      <nav>
+        <a href="#">ABOUT</a>
+        <a href="#">TWO</a>
+        <div class="site-name-tablet">
+          <img class="logo" src="./logo.svg" alt="logo"/>
+        </div>
+        <a href="#">THREE</a>
+        <a href="#">FOUR</a>
+      </nav>
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
+      <img src="./images/newssite-sketch.png" alt="sketch" />
+      <img src="./images/newssite-sketch.png" alt="sketch" />
     </section>
 
-    <section class="">
+    <section class="other-news">
       <!-- The other news  -->
+      <img src="./images/newssite-sketch.png" alt="sketch" />
+      <img src="./images/newssite-sketch.png" alt="sketch" />
+      <img src="./images/newssite-sketch.png" alt="sketch" />
+      <img src="./images/newssite-sketch.png" alt="sketch" />
+      <img src="./images/newssite-sketch.png" alt="sketch" />
+      <img src="./images/newssite-sketch.png" alt="sketch" />
+      <img src="./images/newssite-sketch.png" alt="sketch" />
+    </section>
+
     </section>
   </body>
 </html>
