changed site name

--- a/code/index.html
+++ b/code/index.html
@@ -14,7 +14,7 @@
       <!-- Some kind of logo and navbar -->
       <div class="site-name">
         <img class="logo" src="./logo.svg" alt="logo"/>
-        <span>SITE NAME</span>
+        <span>YLVA'S NEWS SITE</span>
       </div>
 
       <nav>
