Added hamburger menu, nav, two sections with images

--- a/code/index.html
+++ b/code/index.html
@@ -2,22 +2,43 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <div class="hamburger">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <img src="The_New_Yorker_Logo.svg" alt="The New Yorker logo" />
+      <!-- <img src="header-image.jpg" alt="The New Yorker logo"> -->
+      <nav>
+        <a href="">Newsletter</a>
+        <a href="">Sign in</a>
+        <a href="">Shop</a>
+      </nav>
+      <!-- Some kind of logo and navbar (in the header)-->
     </header>
-
-    <section class="big-news">
+    
       <!-- The big news content -->
+    <section class="big-news">
+      <img src="logo.svg" alt="Technigo logo">
+      <img src="logo.svg" alt="Technigo logo">
     </section>
-
-    <section class="">
+      
       <!-- The other news  -->
+    <section class="smaller-news">
+      <img src="logo.svg" alt="Technigo logo">
+      <img src="logo.svg" alt="Technigo logo">
+      <img src="logo.svg" alt="Technigo logo">
+      <img src="logo.svg" alt="Technigo logo">
     </section>
-    <button>Click here</button>
+    <footer>
+      Here is the footer.
+    </footer>
   </body>
 </html>
