--- a/code/index.html
+++ b/code/index.html
@@ -8,8 +8,7 @@
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
+<h1>jedh</h1>  </header>
 
     <section class="big-news">
       <!-- The big news content -->
