your commit message

--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,41 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>Hearthn00b</title>
     <link rel="stylesheet" href="./style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <img src="hearthnoob.png" alt="hearthnoob logo">
     </header>
 
     <section class="big-news">
-      <!-- The big news content -->
+      <div>
+        <img src="toxic reinforcements.png" alt="toxic reinforcements">
+        <a href="https://playhearthstone.com/en-us/cards/55301-toxic-reinforcements?class=hunter&collectible=1&set=standard">Toxic Reinforcements</a>
+      </div>
     </section>
 
-    <section class="">
+    <section class="other-news">
       <!-- The other news  -->
+      <div>
+        <img src="toxic reinforcements.png" alt="toxic reinforcements">
+        <p>Lorem</p>
+      </div>
+      <div>
+        <img src="toxic reinforcements.png" alt="toxic reinforcements">
+        <p>Lorem</p>
+      </div>
+      <div>
+        <img src="toxic reinforcements.png" alt="toxic reinforcements">
+        <p>Lorem</p>
+      </div>
+      <div>
+        <img src="toxic reinforcements.png" alt="toxic reinforcements">
+        <p>Lorem</p>
+      </div>
     </section>
   </body>
 </html>
