Made a layout of images using flexbox

--- a/code/index.html
+++ b/code/index.html
@@ -27,15 +27,20 @@
       <!-- The big news content -->
     <section class="big-news">
       <img src="logo.svg" alt="Technigo logo">
-      <img src="logo.svg" alt="Technigo logo">
+      <img src="logo.svg" alt="Technigo logo"> <!--replace with text box-->
     </section>
       
       <!-- The other news  -->
     <section class="smaller-news">
-      <img src="logo.svg" alt="Technigo logo">
-      <img src="logo.svg" alt="Technigo logo">
-      <img src="logo.svg" alt="Technigo logo">
-      <img src="logo.svg" alt="Technigo logo">
+      <div class="news-1">
+        <img src="logo.svg" alt="Technigo logo">
+        <img src="logo.svg" alt="Technigo logo">
+      </div>
+      <div class="news-2">
+        <img src="logo.svg" alt="Technigo logo">
+        <img src="logo.svg" alt="Technigo logo">
+      </div>
+      
     </section>
     <footer>
       Here is the footer.
