--- a/code/index.html
+++ b/code/index.html
@@ -51,7 +51,7 @@
     </div>
 
     <div class="card">
-      <a href="#"><img src="./img/nfs.jpg" alt="Need For Speed"></a>
+      <a href="#"><img src="./img/NFS.png" alt="Need For Speed"></a>
       <h2>Need For Speed</h2> 
     </div>
 
