Added news text and news hover

--- a/code/index.html
+++ b/code/index.html
@@ -33,37 +33,37 @@
     <section class="news-container">
       <article class="news">
         <img src="news1.jpeg">
-        <h2>Text</h2>
+        <h2>Embroidery on sweater - DIY and stay unique this fall</h2>
       </article>
       <article class="news">
         <img src="news2.jpeg">
-        <h2>Text</h2>
+        <h2>20 jeans jackets that will newer go out of fashion</h2>
+      </article>
+      <article class="news">
+        <img src="news3.jpeg">
+        <h2>Modern autumn wedding dresses and how to style them</h2>
       </article>
       <article class="news">
         <img src="news4.jpeg">
-        <h2>Text</h2>
-      </article>
-      <article class="news">
-        <img src="news12.jpeg">
-        <h2>Text</h2>
-      </article>
-      <article class="news">
-        <img src="news7.jpeg">
-        <h2>Text</h2>
+        <h2>The simple and elegant woman is back to work</h2>
       </article>
       <article class="news">
         <img src="news5.jpeg">
-        <h2>Text</h2>
+        <h2>Stay in the sun with the latest and most colorful sunglasses</h2>
       </article>
       <article class="news">
-        <img src="news14.jpeg">
-        <h2>Text</h2>
+        <img src="news6.jpeg">
+        <h2>Coolest street on Manhattan for fashion photography</h2>
       </article>
       <article class="news">
-        <img src="news10.jpeg">
-        <h2>Text</h2>
+        <img src="news7.jpeg">
+        <h2>Where to be seen for lazy Sunday brunch (and what to wear)</h2>
+      </article>
+      <article class="news">
+        <img src="news8.jpeg">
+        <h2>How to draw attention with monochrome pop colors</h2>
       </article>
     </section>
-      
+       
   </body>
 </html>
