Changes to center and scale images responsively

--- a/code/index.html
+++ b/code/index.html
@@ -29,7 +29,7 @@
     <!--BANNER-->
 
     <div class="banner-container">
-      <p>SUBSCRIBE</p>
+      <p>&#128156; SUBSCRIBE</p>
     </div>
 
 <!-- THE BIG NEWS -->
@@ -50,7 +50,7 @@
     <section class="small-news-container">
       <div class="cards">
         <img class="card-1" src="img/Jazzercise.png" alt="Jazzercise image"/>
-        <div>
+        <div class="card-text">
           <h3>IN BRIEF</h3>
           <h2>Jazzercise - Not For Everyone</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua >>></p>
@@ -69,7 +69,7 @@
       </div>
 
       <div class="cards">
-        <img class="card-3" src="img/Truck.jpg" alt="Truck"/>
+        <img class="card-3" src="img/Truck.jpg" alt="Truck" width=/>
         <div>
           <h3>IN BRIEF</h3>
           <h2>Hawkins Police Dept in Trouble</h2>
@@ -79,7 +79,7 @@
       </div>
 
       <div class="cards">
-        <img class="card-4" src="img/halloween-party-1.png" alt="Halloween Party"/>
+        <img class="card-4" src="img/halloween-party-1.png" alt="Halloween Party" width=/>
         <div>
           <h3>JOURNAL</h3>
           <h2>It's Halloween Folks!</h2>
