--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,42 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="./style.css" />
+</head>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<body>
+  <header>
+    <!-- Some kind of logo and navbar -->
+    <div class="hamburger">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <img class="logo" src="./cc_logo.png" alt="Cloud Club logo">
+    <nav>
+      <a href="#"></a>
+      <a href="#"></a>
+      <a href="#"></a>
+    </nav>
+  </header>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+
+
+  <section class="big-news">
+    <!-- The big news content -->
+  </section>
+
+
+  <section class="cards">
+    <!-- The other news  -->
+  </section>
+
+  <footer>
+    <!-- source info, who build this -->
+  </footer>
+
+</body>
 </html>
