added footer and changed icon and colors

--- a/code/index.html
+++ b/code/index.html
@@ -13,15 +13,19 @@
     <header>
       <!-- Some kind of logo and navbar -->
       <div class="site-name">
-        <img class="logo" src="./logo.svg" alt="logo"/>
-        <span>YLVA'S NEWS SITE</span>
+        <img class="logo" src="./icons/icons8-sailing-ship-96.png" alt="logo" />
+        <span>SKEPP OHOJ!</span>
       </div>
 
       <nav>
         <a href="#">ABOUT</a>
         <a href="#">TWO</a>
         <div class="site-name-tablet">
-          <img class="logo" src="./logo.svg" alt="logo"/>
+          <img
+            class="logo"
+            src="./icons/icons8-sailing-ship-96.png"
+            alt="logo"
+          />
         </div>
         <a href="#">THREE</a>
         <a href="#">FOUR</a>
@@ -45,6 +49,8 @@
       <img src="./images/newssite-sketch.png" alt="sketch" />
     </section>
 
-    </section>
+    <footer class="footer">
+      <p>&copy; Ylva Nilsson</p>
+    </footer>
   </body>
 </html>
