Update Header section to use CSS order property

--- a/code/index.html
+++ b/code/index.html
@@ -13,29 +13,18 @@
 
   <body>
     <header> <!-- Header section-->
-      <nav class="mobile-header">
-        <img class="logo" src="./Images/k-star-logo.png" alt="Star Logo" />
+
+      <nav>
+        <img class="logo" src="./Images/k-star-logo.png" alt="K-Star Logo" />
         <h1>K-POP STAR NEWS</h1>
-      </nav>
-
-      <nav class="tablet-header">
-        <a href="#">NEWS</a>
-        <a href="#">SHOWS</a>
-        <img class="logo" src="./Images/k-star-logo.png" alt="Star Logo" />
-        <a href="#">WATCH</a>
-        <a href="#">CELEBS</a>
-      </nav>
-
-      <nav class="desktop-header">
-        <div class="desktop-logo">
-          <img class="logo" src="./Images/k-star-logo.png" alt="Star Logo" />
-          <h1>K-POP STAR NEWS</h1>
+        <div class="left">
+          <a class="left-links" href="#">NEWS</a>
+          <a class="left-links" href="#">SHOWS</a>
         </div>
-        <div>
-          <a href="#">NEWS</a>
-          <a href="#">SHOWS</a>
-          <a href="#">WATCH</a>
-          <a href="#">CELEBS</a>
+
+        <div class="right">
+          <a class="right-links" href="#">WATCH</a>
+          <a class="right-links" href="#">CELEBS</a>
         </div>
       </nav>
     </header>
