updated section other news and start styling

--- a/code/index.html
+++ b/code/index.html
@@ -34,19 +34,46 @@
 
     <section class="big-news">
       <!-- The big news content -->
-      <img src="./images/newssite-sketch.png" alt="sketch" />
-      <img src="./images/newssite-sketch.png" alt="sketch" />
     </section>
 
     <section class="other-news">
       <!-- The other news  -->
-      <img src="./images/newssite-sketch.png" alt="sketch" />
-      <img src="./images/newssite-sketch.png" alt="sketch" />
-      <img src="./images/newssite-sketch.png" alt="sketch" />
-      <img src="./images/newssite-sketch.png" alt="sketch" />
-      <img src="./images/newssite-sketch.png" alt="sketch" />
-      <img src="./images/newssite-sketch.png" alt="sketch" />
-      <img src="./images/newssite-sketch.png" alt="sketch" />
+      <div>
+        <img class="img-other-news" src="./images/boat-1.jpg" alt="boat one" />
+        <h3>Other news 1</h3>
+      </div>
+      <div>
+        <img class="img-other-news" src="./images/boat-2.jpg" alt="boat two" />
+        <h3>Other news 2</h3>
+      </div>
+      <div>
+        <img
+          class="img-other-news"
+          src="./images/boat-3.jpg"
+          alt="boat three"
+        />
+        <h3>Other news 3</h3>
+      </div>
+      <div>
+        <img class="img-other-news" src="./images/boat-4.jpg" alt="boat four" />
+        <h3>Other news 4</h3>
+      </div>
+      <div>
+        <img class="img-other-news" src="./images/boat-1.jpg" alt="boat one" />
+        <h3>Other news 5</h3>
+      </div>
+      <div>
+        <img class="img-other-news" src="./images/boat-2.jpg" alt="boat two" />
+        <h3>Other news 6</h3>
+      </div>
+      <div>
+        <img
+          class="img-other-news"
+          src="./images/boat-3.jpg"
+          alt="boat three"
+        />
+        <h3>Other news 7</h3>
+      </div>
     </section>
 
     <footer class="footer">
