--- a/code/index.html
+++ b/code/index.html
@@ -40,7 +40,7 @@
       <div class="top-text">
         <h3>TOP STORY</h3>
         <h2>Billy and Mrs Wheeler in Court</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua Lorem ipsum dolor sit amet, consectetur adipiscing elit >>></p>
+        <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consectetura dipiscing elit, sed doipsum dolor sit amet >>> </p>
       </div>
       <hr> 
     </section>
@@ -63,7 +63,7 @@
         <div>
           <h3>PODCAST</h3>
           <h2>Eleven is Back - Tells All</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut >>></p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sit amet, consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore >>></p>
           <hr>
         </div>
       </div>
