--- a/code/index.html
+++ b/code/index.html
@@ -2,13 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>Project 2: News that are not news</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <img class = "logo" src = "logo.svg"></img>
+      <nav>
+        <a href= "a">One</a> 
+        <a href= "a">Two</a> 
+        <a href= "a">Three</a> 
+        <a href= "a">Four</a> 
+        
+        <!-- the link will be clickable but it wont go anywhere right now -->
+
+      </nav>
     </header>
 
     <section class="big-news">
