pushing to load cloud of the month image

--- a/code/index.html
+++ b/code/index.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Cloud Club</title>
   <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
   <header>
-    <!-- Some kind of logo and navbar -->
     <div class="hamburger">
       <div></div>
       <div></div>
@@ -17,21 +16,49 @@
     </div>
     <img class="logo" src="./cc_logo.png" alt="Cloud Club logo">
     <nav>
-      <a href="#"></a>
-      <a href="#"></a>
-      <a href="#"></a>
+      <a href="#">Login</a>
+      <a href="#">About</a>
+      <a href="#">Join</a>
     </nav>
   </header>
 
-
-
-  <section class="big-news">
-    <!-- The big news content -->
+  <section class="monthly-cloud">
+    <section class="container">
+      <img src="cloudom.jpg" alt="Cloud of the Month image">
+      <div>
+          <h2>Cloud of the Month</h2>
+          <p>Polar stratospheric clouds: nacreous</p>
+          <p>Polar stratospheric clouds composed primarily of ice are known as nacreous, or mother-of-pearl, clouds. After sunset they are characterized by brilliant iridescent colours, as shown in this photograph from Sweden.</p>
+          <p>Nacreous clouds only form in the stratosphere at a temperature below the ice frost point (typically near –85 °C) in the high latitudes of both hemispheres during the winter. They are often lenticular in shape.</p>
+      </div>
+    </section>
   </section>
 
 
-  <section class="cards">
-    <!-- The other news  -->
+  <section class="cloud-card-container">
+    <section class="container">
+      <h3>Up for a challenge?</h3>
+      <p>Pick a prompt, view the README, fork the code, and start writing!</p>
+      <p>We'd love to see what you can do. Show us in the GitHub Community Forum.</p>
+      <h3>Week 1</h3>
+      
+      <section class="cloud-cards">
+          <a href="#">
+              <div>
+                  <figure class="circles">
+                      <span></span>
+                      <span></span>
+                  </figure>
+                  <p>MEET</p>
+                  <h4>CLOUD</h4>
+              </div>
+              <img src="#" alt="image">
+              <p>Hex codes everywhere</p>
+              <p>A different color with every ping</p>
+              <p>LEVEL 1</p>
+          </a>
+
+    </section>
   </section>
 
   <footer>
