Finished responsive navbar

--- a/index.html
+++ b/index.html
@@ -4,18 +4,31 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="style.css">
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Reenie+Beanie&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Caveat+Brush&display=swap" rel="stylesheet">
         <title>Document</title>
 </head>
 
 <body>
         <header>
                 <nav class="navbar">
-                        <a href="#" class="navbar-item logo">MN</a>
-                        <a href="#" class="navbar-item">Wood</a>
-                        <a href="#" class="navbar-item">Clay</a>
-                        <a href="#" class="navbar-item item-1">Color</a>
-                        <a href="#" class="navbar-item item-1">Yarn</a>
+                        <ul class="navbar-menu">
+                                <li class="navbar-menu-item logo">
+                                        <a href="#" class="nav-link">MN</a>
+                                </li>
+                                <li class="navbar-menu-item">
+                                        <a href="#" class="nav-link">Wood</a>
+                                </li>
+                                <li class="navbar-menu-item">
+                                        <a href="#" class="nav-link">Clay</a>
+                                </li>
+                                <li class="navbar-menu-item item-1">
+                                        <a href="#" class="nav-link">Color</a>
+                                </li>
+                                <li class="navbar-menu-item item-1">
+                                        <a href="#" class="nav-link">Yarn</a>
+                                </li>
+                                
+                        </ul>
                 </nav>
         </header>   
 </body>
