Fixed navbar, beginning of main title area

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                                 
                         </ul>
                 </nav>
+                <section class="main-title"
         </header>   
 </body>
 </html>
