--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,34 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>Alright!</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <div class="hamburger">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <img src="Images/Resurs4.png" alt="Backstreet News Logo" />
+      <nav>
+        <a href="#">ONE</a>
+        <a href="#">TWO</a>
+        <a href="#">THREE</a>
+      </nav>
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
     </section>
 
-    <section class="">
+    <section class="article-news">
       <!-- The other news  -->
     </section>
+
+    <footer></footer>
   </body>
 </html>
